<resources>
    <string name="app_name">Monitoreo Incidencias PUCP</string>

    <string name="UserIncidenciasHistory">Tus Incidencias Reportadas</string>
    <string name="InfraIncidenciasHistory">Histórico de incidencias</string>

    <string name="Incidencia_TitleValue">#Título de la incidencia#</string>
    <string name="Incidencia_DateValue">##/##/####</string>
    <string name="Incidencia_StatusValue">#Por atender#</string>
    <string name="Incidencia_AnnotationValue">#Sí, 2#</string>
    <string name="Incidencia_StudentValue">#Eddy Rodríguez#</string>

    <string name="FilterTitle">Filtros</string>
    <string name="FilterLocation">Por ubicación</string>
    <string name="FilterDate">Por fecha</string>
    <string name="FilterContent">Por contenido</string>
    <string name="FilterStatus">Por estado</string>

    <string name="ButtonBack">Volver</string>
    <string name="ButtonFilter">Filtrar</string>
    <string name="ButtonAccept">Aceptar</string>
    <string name="Title">Título:</string>
    <string name="RegisterDate">Fecha de registro:</string>
    <string name="Status">Estado:</string>
    <string name="Annotations">Anotaciones adicionales:</string>
    <string name="RegisteredBy">Registrado por:</string>
    <string name="CheckDate">Fecha de revisión:</string>
    <string name="Map">Mapa</string>
    <string name="Today">Hoy</string>
    <string name="From">Desde</string>
    <string name="To">Hasta</string>
    <string name="KeyWords">Palabras clave</string>
    <string name="Atendido">Atendido</string>
    <string name="NoAtendido">Por atender</string>
    <string name="nueva_anotacion_title">Nueva Anotacion</string>
    <string name="title_activity_map_filter">Mapa</string>
    <string name="title_incidencias_cercanas">Incidenicias Cercanas</string>
    <string name="title_incidencia_formulario">Formulario de Incidencia</string>
    <string name="titel_incidencia_seleccionada">Incidencia Seleccionada</string>
    <string name="sin_resolver_mis_incidencias">Sin Resolver</string>
    <string name="mis_incidencias_ver_historico">Ver Historico</string>
    <string name="historial_user_atendidos">Historial (atendidos)</string>
    <string name="historial_user_titulo">Historial de Reportes</string>
    <string name="UserIncidencias_titulo">Tus Incidencias Reportadas</string>
    <string name="Nueva_Anotacion_Titulo">Anotacion: </string>
    <string name="Nueva_Anotacion_Text_Hint">Escriba aqui su anotacion</string>
    <string name="Nueva_Anotacion_Incidencia">Incidencia: \n</string>
    <string name="IncidenciasCercanasInfo1">A continuación verás una lista de incidencias cercanas a ti</string>
    <string name="IncidenciasCercanasInfo2">Verifica si la incidencia que deseas agregar se encuentra en la lista, en cuyo caso, ya no será necesario agregarla, pero puedes añadir información adicional.</string>
    <string name="InfraIncidenciaSeleccionadaMarcarResuelto"> Marcar como resuelto</string>

</resources>
