<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background2">

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textViewSingleUserIncidencia_TitleValue"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/Incidencia_TitleValue"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSingleUserIncidenciaTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewSingleUserIncidenciaTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewSingleUserIncidenciaTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewSingleUserIncidencia_RegisterDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Incidencia_DateValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/textViewSingleUserIncidenciaRegisterDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewSingleUserIncidenciaRegisterDate" />

        <TextView
            android:id="@+id/textViewSingleUserIncidencia_CheckDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Incidencia_DateValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewSingleUserIncidenciaCheckDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewSingleUserIncidenciaCheckDate" />

        <TextView
            android:id="@+id/textViewSingleUserIncidencia_StatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Incidencia_StatusValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/textViewSingleUserIncidenciaStatus"
            app:layout_constraintTop_toBottomOf="@+id/textViewSingleUserIncidenciaStatus" />

        <TextView
            android:id="@+id/textViewSingleUserIncidenciaRegisterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/RegisterDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewSingleUserIncidencia"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewSingleUserIncidenciaStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Status"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewSingleUserIncidenciaRegisterDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewSingleUserIncidencia_RegisterDateValue" />

        <TextView
            android:id="@+id/textViewSingleUserIncidenciaCheckDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/CheckDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewSingleUserIncidenciaStatus"
            app:layout_constraintTop_toBottomOf="@+id/textViewSingleUserIncidencia_StatusValue" />

        <ImageView
            android:id="@+id/imageViewSingleUserIncidencia"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/otro_boton_round_border3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.296" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:backgroundTint="@color/black"
        android:background="@color/colorPrimaryDark">
    </TextView>

    <!--
    <TextView
        android:id="@+id/textViewSingleUserIncidenciaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSingleUserIncidencia_TitleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/Incidencia_TitleValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSingleUserIncidenciaTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewSingleUserIncidenciaTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewSingleUserIncidenciaTitle" />

-->


</LinearLayout>